--- a/main.html
+++ b/main.html
@@ -10,7 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<section>
+		<div>
+			<h3>What is the capital of India?</h3>
+		<form action="">
+			<input type="radio" name="capital" value="New Delhi">
+			<label for="">New Delhi</label><br>
+			<input type="radio" name="capital" value="Mumbai">
+			<label for="">Mumbai</label>
+			<blockquote class="bq"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+		</form>
+		</div>
+	</section>
 </body>
 
 </html>
