--- a/main.html
+++ b/main.html
@@ -4,13 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<script type="text/javascript" src="./script.js">
+	</script>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<section>
+    
+	
 		<div>
 			<h3>What is the capital of India?</h3>
 		<form action="">
@@ -18,10 +19,10 @@
 			<label for="">New Delhi</label><br>
 			<input type="radio" name="capital" value="Mumbai">
 			<label for="">Mumbai</label>
-			<blockquote class="bq"> New Delhi is the capital of India and an administrative district of NCT Delhi</blockquote>
+			<blockquote class="bq"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 		</form>
 		</div>
-	</section>
+	
 </body>
 
 </html>
