--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 			<label for="">New Delhi</label><br>
 			<input type="radio" name="capital" value="Mumbai">
 			<label for="">Mumbai</label>
-			<blockquote class="bq"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+			<blockquote class="bq" cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 		</form>
 		</div>
 	
